--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -109,7 +108,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -236,6 +234,7 @@ allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
+allow 178.218.144.96;
 allow 178.218.144.99;
 allow 178.236.247.122;
 allow 178.31.146.18;
@@ -253,6 +252,7 @@ allow 179.43.167.194;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.211.46.207;
 allow 184.105.48.40;
 allow 184.75.221.163;
 allow 185.100.85.132;
@@ -299,7 +299,6 @@ allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.171.84;
-allow 185.165.190.111;
 allow 185.170.114.25;
 allow 185.174.136.114;
 allow 185.177.151.34;
@@ -641,6 +640,7 @@ allow 192.42.116.25;
 allow 192.42.116.26;
 allow 192.42.116.27;
 allow 192.46.227.185;
+allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.109.120.143;
@@ -835,7 +835,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -878,7 +877,6 @@ allow 209.141.62.71;
 allow 212.21.66.6;
 allow 212.69.167.80;
 allow 212.73.134.204;
-allow 212.95.50.77;
 allow 213.136.84.104;
 allow 213.252.140.118;
 allow 213.95.149.22;
@@ -1106,6 +1104,7 @@ allow 2605:6400:30:fdd8::2;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:aa80:0:9::3;
+allow 2607:5300:201:3100::535e;
 allow 2607:5300:205:200::163a;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:61:785::;
@@ -1173,7 +1172,6 @@ allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
-allow 2a00:6d42:1242:1c00::1cd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
@@ -1541,7 +1539,6 @@ allow 2a10:1fc0:1::ef6b:36d;
 allow 2a10:1fc0:1::f764:512;
 allow 2a10:1fc0:1::fed5:16e7;
 allow 2a10:8a40:f313::29;
-allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1563,7 +1560,6 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.213.27.131;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1668,6 +1664,8 @@ allow 51.222.142.67;
 allow 51.222.84.46;
 allow 51.38.113.118;
 allow 51.38.81.135;
+allow 51.75.175.24;
+allow 51.75.175.25;
 allow 51.75.64.23;
 allow 51.81.222.62;
 allow 51.81.254.14;
@@ -1760,7 +1758,6 @@ allow 80.67.172.162;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
@@ -1788,7 +1785,6 @@ allow 85.204.116.211;
 allow 85.204.116.88;
 allow 85.209.176.103;
 allow 85.215.76.62;
-allow 85.235.145.205;
 allow 85.93.218.204;
 allow 86.104.194.13;
 allow 87.118.110.27;
@@ -1833,7 +1829,6 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
 allow 91.217.219.254;
-allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.235.234.209;
@@ -1850,7 +1845,6 @@ allow 93.123.12.112;
 allow 93.243.56.177;
 allow 93.90.74.31;
 allow 93.95.225.141;
-allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.230.54;
