--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -107,7 +107,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -234,6 +233,7 @@ deny 2605:6400:30:fdd8::2;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
 deny 2605:aa80:0:9::3;
+deny 2607:5300:201:3100::535e;
 deny 2607:5300:205:200::163a;
 deny 2607:5300:205:200::4894;
 deny 2607:5300:61:785::;
@@ -300,7 +300,6 @@ deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::d735;
 deny 2a00:1dc0:caff:8b::24bd;
-deny 2a00:6d42:1242:1c00::1cd;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:2017:1::169;
 deny 2a01:4262:1ab:ffff::133;
@@ -668,7 +667,6 @@ deny 2a10:1fc0:1::ef6b:36d;
 deny 2a10:1fc0:1::f764:512;
 deny 2a10:1fc0:1::fed5:16e7;
 deny 2a10:8a40:f313::29;
-deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
