--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -107,7 +107,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -234,6 +233,7 @@ set_real_ip_from 2605:6400:30:fdd8::2;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
 set_real_ip_from 2605:aa80:0:9::3;
+set_real_ip_from 2607:5300:201:3100::535e;
 set_real_ip_from 2607:5300:205:200::163a;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:61:785::;
@@ -300,7 +300,6 @@ set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:178::982b;
 set_real_ip_from 2a00:1dc0:caff:73::d735;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
-set_real_ip_from 2a00:6d42:1242:1c00::1cd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
@@ -668,7 +667,6 @@ set_real_ip_from 2a10:1fc0:1::ef6b:36d;
 set_real_ip_from 2a10:1fc0:1::f764:512;
 set_real_ip_from 2a10:1fc0:1::fed5:16e7;
 set_real_ip_from 2a10:8a40:f313::29;
-set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
