--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -41,7 +41,6 @@ allow 104.244.79.61;
 allow 107.172.13.143;
 allow 107.172.31.146;
 allow 107.172.31.165;
-allow 107.174.138.172;
 allow 107.174.231.197;
 allow 107.189.10.141;
 allow 107.189.10.175;
@@ -552,6 +551,7 @@ allow 185.246.188.149;
 allow 185.246.188.67;
 allow 185.246.188.73;
 allow 185.246.188.74;
+allow 185.246.189.99;
 allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
@@ -577,6 +577,7 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
+allow 189.147.169.169;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -649,6 +650,7 @@ allow 193.163.170.149;
 allow 193.168.141.245;
 allow 193.189.100.194;
 allow 193.189.100.195;
+allow 193.189.100.196;
 allow 193.189.100.197;
 allow 193.189.100.198;
 allow 193.189.100.199;
@@ -833,7 +835,6 @@ allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 200.25.27.112;
-allow 201.137.14.124;
 allow 202.61.226.98;
 allow 202.69.76.36;
 allow 204.137.14.104;
@@ -882,6 +883,7 @@ allow 217.160.88.146;
 allow 217.27.189.205;
 allow 23.129.64.130;
 allow 23.129.64.131;
+allow 23.129.64.132;
 allow 23.129.64.133;
 allow 23.129.64.134;
 allow 23.129.64.135;
@@ -1104,6 +1106,7 @@ allow 2607:b500:408:3100::1;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::130;
 allow 2620:18c:0:192::131;
+allow 2620:18c:0:192::132;
 allow 2620:18c:0:192::133;
 allow 2620:18c:0:192::134;
 allow 2620:18c:0:192::135;
@@ -1165,6 +1168,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1294,6 +1298,7 @@ allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
+allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
@@ -1500,6 +1505,7 @@ allow 2a0e:fa00:0:d0::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
+allow 2a0f:df00:0:255::196;
 allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
@@ -1551,6 +1557,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
+allow 34.196.62.105;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1626,7 +1633,6 @@ allow 45.9.150.130;
 allow 45.92.1.74;
 allow 45.94.31.180;
 allow 45.95.169.184;
-allow 45.95.169.223;
 allow 45.95.169.224;
 allow 45.95.169.225;
 allow 45.95.169.226;
@@ -1665,7 +1671,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.206.215.201;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1842,7 +1847,7 @@ allow 93.95.225.141;
 allow 93.95.228.125;
 allow 93.95.230.165;
 allow 93.95.230.54;
-allow 93.99.104.194;
+allow 93.99.104.18;
 allow 94.102.51.15;
 allow 94.131.110.58;
 allow 94.131.111.196;
