--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -41,7 +41,6 @@ set_real_ip_from 104.244.79.61;
 set_real_ip_from 107.172.13.143;
 set_real_ip_from 107.172.31.146;
 set_real_ip_from 107.172.31.165;
-set_real_ip_from 107.174.138.172;
 set_real_ip_from 107.174.231.197;
 set_real_ip_from 107.189.10.141;
 set_real_ip_from 107.189.10.175;
@@ -552,6 +551,7 @@ set_real_ip_from 185.246.188.149;
 set_real_ip_from 185.246.188.67;
 set_real_ip_from 185.246.188.73;
 set_real_ip_from 185.246.188.74;
+set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
 set_real_ip_from 185.252.232.218;
@@ -577,6 +577,7 @@ set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
+set_real_ip_from 189.147.169.169;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
@@ -649,6 +650,7 @@ set_real_ip_from 193.163.170.149;
 set_real_ip_from 193.168.141.245;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
+set_real_ip_from 193.189.100.196;
 set_real_ip_from 193.189.100.197;
 set_real_ip_from 193.189.100.198;
 set_real_ip_from 193.189.100.199;
@@ -833,7 +835,6 @@ set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 200.25.27.112;
-set_real_ip_from 201.137.14.124;
 set_real_ip_from 202.61.226.98;
 set_real_ip_from 202.69.76.36;
 set_real_ip_from 204.137.14.104;
@@ -882,6 +883,7 @@ set_real_ip_from 217.160.88.146;
 set_real_ip_from 217.27.189.205;
 set_real_ip_from 23.129.64.130;
 set_real_ip_from 23.129.64.131;
+set_real_ip_from 23.129.64.132;
 set_real_ip_from 23.129.64.133;
 set_real_ip_from 23.129.64.134;
 set_real_ip_from 23.129.64.135;
@@ -1104,6 +1106,7 @@ set_real_ip_from 2607:b500:408:3100::1;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::130;
 set_real_ip_from 2620:18c:0:192::131;
+set_real_ip_from 2620:18c:0:192::132;
 set_real_ip_from 2620:18c:0:192::133;
 set_real_ip_from 2620:18c:0:192::134;
 set_real_ip_from 2620:18c:0:192::135;
@@ -1165,6 +1168,7 @@ set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
+set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1294,6 +1298,7 @@ set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
+set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
@@ -1500,6 +1505,7 @@ set_real_ip_from 2a0e:fa00:0:d0::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
+set_real_ip_from 2a0f:df00:0:255::196;
 set_real_ip_from 2a0f:df00:0:255::197;
 set_real_ip_from 2a0f:df00:0:255::198;
 set_real_ip_from 2a0f:df00:0:255::199;
@@ -1551,6 +1557,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
+set_real_ip_from 34.196.62.105;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1626,7 +1633,6 @@ set_real_ip_from 45.9.150.130;
 set_real_ip_from 45.92.1.74;
 set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.95.169.184;
-set_real_ip_from 45.95.169.223;
 set_real_ip_from 45.95.169.224;
 set_real_ip_from 45.95.169.225;
 set_real_ip_from 45.95.169.226;
@@ -1665,7 +1671,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.206.215.201;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
@@ -1842,7 +1847,7 @@ set_real_ip_from 93.95.225.141;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.230.165;
 set_real_ip_from 93.95.230.54;
-set_real_ip_from 93.99.104.194;
+set_real_ip_from 93.99.104.18;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.131.110.58;
 set_real_ip_from 94.131.111.196;
