--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -151,6 +151,7 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 156.146.63.136;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -271,7 +272,6 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
-allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -559,7 +559,6 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 189.147.169.169;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -817,6 +816,7 @@ allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 200.25.27.112;
+allow 201.137.0.55;
 allow 202.61.226.98;
 allow 202.69.76.36;
 allow 204.137.14.104;
@@ -853,7 +853,6 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 213.136.84.104;
-allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.101;
@@ -1150,6 +1149,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:4f9:c010:8fb::bee;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
@@ -1276,7 +1276,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1483,7 +1482,6 @@ allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
-allow 2a0e:fa00:0:d0::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1534,7 +1532,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.209.141.45;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1550,6 +1547,7 @@ allow 38.97.116.244;
 allow 45.120.178.198;
 allow 45.120.178.253;
 allow 45.120.178.83;
+allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.129.199.22;
 allow 45.130.20.250;
@@ -1599,10 +1597,10 @@ allow 45.79.50.161;
 allow 45.80.158.205;
 allow 45.80.158.27;
 allow 45.80.208.123;
+allow 45.8.147.17;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.87.154.151;
-allow 45.9.148.219;
 allow 45.9.150.103;
 allow 45.9.150.130;
 allow 45.92.1.74;
@@ -1646,7 +1644,9 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.5.12.191;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1687,7 +1687,6 @@ allow 62.171.137.169;
 allow 62.182.84.146;
 allow 64.227.115.78;
 allow 64.5.123.66;
-allow 65.109.30.253;
 allow 66.146.193.33;
 allow 66.175.223.155;
 allow 66.220.242.222;
@@ -1843,17 +1842,22 @@ allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.164.22.4;
+allow 95.164.33.20;
 allow 95.164.33.22;
 allow 95.164.33.23;
 allow 95.164.33.25;
+allow 95.164.33.26;
 allow 95.164.33.37;
 allow 95.164.33.42;
+allow 95.164.33.46;
+allow 95.164.33.47;
 allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
 allow 95.211.7.148;
+allow 95.216.145.1;
 allow 96.27.198.133;
 allow 96.42.26.63;
 allow 96.66.15.152;
