--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -151,6 +151,7 @@ set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 156.146.63.136;
 set_real_ip_from 160.119.249.240;
+set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -271,7 +272,6 @@ set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.141.147.128;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
-set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
@@ -559,7 +559,6 @@ set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
-set_real_ip_from 189.147.169.169;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
@@ -817,6 +816,7 @@ set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 200.25.27.112;
+set_real_ip_from 201.137.0.55;
 set_real_ip_from 202.61.226.98;
 set_real_ip_from 202.69.76.36;
 set_real_ip_from 204.137.14.104;
@@ -853,7 +853,6 @@ set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 213.136.84.104;
-set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
@@ -1150,6 +1149,7 @@ set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
+set_real_ip_from 2a01:4f9:c010:8fb::bee;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
@@ -1276,7 +1276,6 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
-set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
@@ -1483,7 +1482,6 @@ set_real_ip_from 2a0e:d602:1:14bc::2;
 set_real_ip_from 2a0e:d602:2:2a2::2;
 set_real_ip_from 2a0e:d602:2:55f::2;
 set_real_ip_from 2a0e:e701:1198::1;
-set_real_ip_from 2a0e:fa00:0:d0::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1534,7 +1532,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 3.209.141.45;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1550,6 +1547,7 @@ set_real_ip_from 38.97.116.244;
 set_real_ip_from 45.120.178.198;
 set_real_ip_from 45.120.178.253;
 set_real_ip_from 45.120.178.83;
+set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.129.199.22;
 set_real_ip_from 45.130.20.250;
@@ -1599,10 +1597,10 @@ set_real_ip_from 45.79.50.161;
 set_real_ip_from 45.80.158.205;
 set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.208.123;
+set_real_ip_from 45.8.147.17;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.87.154.151;
-set_real_ip_from 45.9.148.219;
 set_real_ip_from 45.9.150.103;
 set_real_ip_from 45.9.150.130;
 set_real_ip_from 45.92.1.74;
@@ -1646,7 +1644,9 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 52.5.12.191;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1687,7 +1687,6 @@ set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.5.123.66;
-set_real_ip_from 65.109.30.253;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.175.223.155;
 set_real_ip_from 66.220.242.222;
@@ -1843,17 +1842,22 @@ set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.164.22.4;
+set_real_ip_from 95.164.33.20;
 set_real_ip_from 95.164.33.22;
 set_real_ip_from 95.164.33.23;
 set_real_ip_from 95.164.33.25;
+set_real_ip_from 95.164.33.26;
 set_real_ip_from 95.164.33.37;
 set_real_ip_from 95.164.33.42;
+set_real_ip_from 95.164.33.46;
+set_real_ip_from 95.164.33.47;
 set_real_ip_from 95.164.4.104;
 set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.211.7.148;
+set_real_ip_from 95.216.145.1;
 set_real_ip_from 96.27.198.133;
 set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
