--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -303,6 +303,7 @@ set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
+set_real_ip_from 2a01:4f9:c010:8fb::bee;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
@@ -429,7 +430,6 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
-set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
@@ -636,7 +636,6 @@ set_real_ip_from 2a0e:d602:1:14bc::2;
 set_real_ip_from 2a0e:d602:2:2a2::2;
 set_real_ip_from 2a0e:d602:2:55f::2;
 set_real_ip_from 2a0e:e701:1198::1;
-set_real_ip_from 2a0e:fa00:0:d0::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
