--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -108,6 +108,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -642,7 +643,6 @@ allow 193.218.118.133;
 allow 193.218.118.182;
 allow 193.218.118.91;
 allow 193.233.133.109;
-allow 193.233.233.124;
 allow 193.239.232.102;
 allow 193.239.232.230;
 allow 193.26.115.43;
@@ -806,6 +806,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -827,7 +828,6 @@ allow 204.85.191.9;
 allow 205.185.113.180;
 allow 205.185.116.34;
 allow 205.185.117.149;
-allow 205.185.119.35;
 allow 205.185.121.170;
 allow 205.185.123.93;
 allow 205.185.124.176;
@@ -945,16 +945,10 @@ allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8100:400::9;
-allow 2.57.122.215;
-allow 2.57.122.246;
-allow 2.57.122.58;
 allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.43;
 allow 2.58.56.90;
-allow 2.58.95.45;
-allow 2.58.95.47;
-allow 2.58.95.53;
 allow 2.58.95.59;
 allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
@@ -1257,10 +1251,18 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:67b0::1;
+allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6841::1;
 allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:696c::1;
+allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
+allow 2a05:b0c7:6c28::1;
+allow 2a05:b0c7:6c6d::1;
+allow 2a05:b0c7:6cd8::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1510,7 +1512,6 @@ allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
-allow 2a12:5940:53f7::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
@@ -1527,7 +1528,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.214.53.83;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1540,6 +1540,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.206.158.245;
 allow 45.120.178.198;
 allow 45.120.178.253;
 allow 45.120.178.83;
@@ -1812,9 +1813,18 @@ allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.230.54;
+allow 93.99.104.128;
 allow 93.99.104.18;
 allow 93.99.104.194;
 allow 94.102.51.15;
+allow 94.103.124.101;
+allow 94.103.124.107;
+allow 94.103.124.112;
+allow 94.103.124.121;
+allow 94.103.124.46;
+allow 94.103.124.90;
+allow 94.103.124.91;
+allow 94.103.124.98;
 allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
